--- a/package.json
+++ b/package.json
@@ -4,15 +4,27 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.5.0",
-    "react": "^16.3.2",
+    "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "1.1.4",
-    "reactstrap": "^5.0.0-beta.3"
+    "react-scripts": "3.4.1",
+    "reactstrap": "^8.5.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
